--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="resultTitle"></div>
         <img id="resultImg"></img>
         <div id="resultDescription"></div>
-        <div id="restart">Restart Game</div>
+        <div id="restart">Retake Quiz</div>
     </div>
 
     <img src="./unmute.png" id="unmute"></img>
@@ -31,7 +31,7 @@
     <script>
         var soundtrack = new Audio("GameofThrones.mp3");
         soundtrack.loop = true;
-        soundtrack.play();
+        // soundtrack.play();
         var audioIsPlaying = true;
 
         const toggleSoundtrack = () => {
