--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script>
         var soundtrack = new Audio("GameofThrones.mp3");
         soundtrack.loop = true;
-        // soundtrack.play();
+        soundtrack.play();
         var audioIsPlaying = true;
 
         const toggleSoundtrack = () => {
